From SVN Migration : Change SCM info
git-svn-id: svn+ssh://svn.code.sf.net/p/tango-cs/code/share/yat/trunk@15730 4e9c00fd-8f2e-0410-aa12-93ce3db5e235

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>fr.soleil.lib</groupId>
     <artifactId>YAT-${aol}-${library}-${mode}</artifactId>
-    <version>1.5.9</version>
+    <version>1.5.10-SNAPSHOT</version>
 
     <packaging>nar</packaging>
 
@@ -37,15 +37,9 @@
     </developers>
 
     <scm>
-        <connection>
-			      ${scm.connection.cvs.tango-ds}:Libraries/YAT
-        </connection>
-        <developerConnection>
-            ${scm.developerConnection.cvs.tango-ds}:Libraries/YAT
-        </developerConnection>
-        <url>
-			      ${scm.url.cvs.tango-ds}/Libraries/YAT
-        </url>
+        <connection>${scm.connection.svn.tango-cs}:share/yat</connection>
+        <developerConnection>${scm.developerConnection.cvs.svn.tango-cs}:share/yat</developerConnection>
+        <url>${scm.url.svn.tango-cs}/share/yat</url>
     </scm>
 
     <build>
