--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>fr.soleil.lib</groupId>
     <artifactId>YAT-${aol}-${library}-${mode}</artifactId>
-    <version>1.5.10-SNAPSHOT</version>
+    <version>1.6.0</version>
 
     <packaging>nar</packaging>
 
