--- a/samples/memory/Makefile.linux
+++ b/samples/memory/Makefile.linux
@@ -22,8 +22,7 @@ BIN_NAME = sharedptrtest
 #==============================================================================
 CC=g++
 #------------------------------------------------------------------------------
-CFLAGS  = -pipe -O2 -W -D_DEBUG -DYAT_ENABLE_LOG
-CFLAGS += -g -D_DEBUG
+CFLAGS  = -pipe -O2 -W -g
 #------------------------------------------------------------------------------
 LD=gcc
 #------------------------------------------------------------------------------
@@ -33,13 +32,14 @@ LDFLAGS =
 #------------------------------------------------------------------------------
 # LIBS
 #------------------------------------------------------------------------------
-LIBS = -lYATd -lpthread -lstdc++
+LIBS = -lYAT -lpthread -lstdc++
 
 #------------------------------------------------------------------------------
 # OBJS FILES
 #------------------------------------------------------------------------------
-SRC_OBJS = ./sharedptr_test.o
-					 			 	 	 
+SP_SRC_OBJS = ./sharedptr_test.o
+SO_SRC_OBJS = ./shared_object_ptr_test.o	
+	 			 	 	 
 #------------------------------------------------------------------------------
 # RULE for .cpp files
 #------------------------------------------------------------------------------
@@ -50,13 +50,16 @@ SRC_OBJS = ./sharedptr_test.o
 #------------------------------------------------------------------------------
 # RULE: all
 #------------------------------------------------------------------------------
-all: build install
+all: build_so build_sp
 
 #------------------------------------------------------------------------------
 # RULE: build
 #------------------------------------------------------------------------------
-build: $(SRC_OBJS)
-	$(LD) -o $(BIN_NAME) $(LDFLAGS) $(SRC_OBJS) $(LIB_DIRS) $(LIBS) 
+build_so: $(SO_SRC_OBJS)
+	$(LD) -o sharedobjectptrtest $(LDFLAGS) $(SO_SRC_OBJS) $(LIB_DIRS) $(LIBS) 
+
+build_sp: $(SP_SRC_OBJS)
+	$(LD) -o sharedptrtest $(LDFLAGS) $(SP_SRC_OBJS) $(LIB_DIRS) $(LIBS) 
 
 #------------------------------------------------------------------------------
 # RULE: install
