--- a/src/Makefile.macosx
+++ b/src/Makefile.macosx
@@ -29,7 +29,9 @@
 # - i386   : build 32 bits libraries
 # - x86_64 : build 64 bits libraries
 #-----------------------------------------------------------------------------
-#####> THIS IS SUPPOSED TO BE SPECIFIED BY XCODE: ARCH_TYPE = É
+ifndef ARCH_TYPE
+ARCH_TYPE = i386  
+endif
 
 #=============================================================================
 # PROJECT_TYPE
@@ -37,7 +39,9 @@
 # - STATIC_LIB : your project is a static library (.a)
 # - SHARED_LIB : your project is a shared library (.dylib)
 #-----------------------------------------------------------------------------
-#####> THIS IS SUPPOSED TO BE SPECIFIED BY XCODE: PROJECT_TYPE = É
+ifndef PROJECT_TYPE
+PROJECT_TYPE = SHARED_LIB
+endif
 
 #=============================================================================
 # RELEASE_TYPE
@@ -45,7 +49,9 @@
 # - DEBUG     : debug symbols - no optimization
 # - OPTIMIZED : no debug symbols - optimization level set to O2
 #-----------------------------------------------------------------------------
-#####> THIS IS SUPPOSED TO BE SPECIFIED BY XCODE: RELEASE_TYPE = É
+ifndef PROJECT_TYPE
+RELEASE_TYPE = OPTIMIZED
+endif
 
 #=============================================================================
 # PROJECT_NAME is the name of the library/device/exe you want to build
@@ -95,7 +101,6 @@ endif
 CXXFLAGS_USER  = -DNoNanoSleep
 CXXFLAGS_USER += -DPthreadDraftVersion=8 
 CXXFLAGS_USER += -UPthreadSupportThreadPriority 
-CXXFLAGS_USER += -UNeedPthreadInit
 CXXFLAGS_USER += -fno-enforce-eh-specs -Wno-unused-parameter
 ifeq ($(RELEASE_TYPE),DEBUG)
 	CXXFLAGS_USER += -D_DEBUG
@@ -136,25 +141,44 @@ SVC_OBJS = $(OBJ_DIR)/Exception.a.o \
 #=============================================================================
 include ./build/macosx/common_target.opt
 
-cleanall:
+cleanall: i386-clean x86_64-clean
+
+i386-clean:
 	make -f Makefile.macosx clean RELEASE_TYPE=OPTIMIZED PROJECT_TYPE=STATIC_LIB ARCH_TYPE=i386
 	make -f Makefile.macosx clean RELEASE_TYPE=DEBUG PROJECT_TYPE=STATIC_LIB ARCH_TYPE=i386
 	make -f Makefile.macosx clean RELEASE_TYPE=OPTIMIZED PROJECT_TYPE=SHARED_LIB ARCH_TYPE=i386
 	make -f Makefile.macosx clean RELEASE_TYPE=DEBUG PROJECT_TYPE=SHARED_LIB ARCH_TYPE=i386
+
+x86_64-clean:
 	make -f Makefile.macosx clean RELEASE_TYPE=OPTIMIZED PROJECT_TYPE=STATIC_LIB ARCH_TYPE=x86_64
 	make -f Makefile.macosx clean RELEASE_TYPE=DEBUG PROJECT_TYPE=STATIC_LIB ARCH_TYPE=x86_64
 	make -f Makefile.macosx clean RELEASE_TYPE=OPTIMIZED PROJECT_TYPE=SHARED_LIB ARCH_TYPE=x86_64
 	make -f Makefile.macosx clean RELEASE_TYPE=DEBUG PROJECT_TYPE=SHARED_LIB ARCH_TYPE=x86_64
-	
-releases:
-	make -f Makefile.macosx clean all RELEASE_TYPE=OPTIMIZED PROJECT_TYPE=STATIC_LIB ARCH_TYPE=i386
-	make -f Makefile.macosx clean all RELEASE_TYPE=DEBUG PROJECT_TYPE=STATIC_LIB ARCH_TYPE=i386
-	make -f Makefile.macosx clean all RELEASE_TYPE=OPTIMIZED PROJECT_TYPE=SHARED_LIB ARCH_TYPE=i386
-	make -f Makefile.macosx clean all RELEASE_TYPE=DEBUG PROJECT_TYPE=SHARED_LIB ARCH_TYPE=i386
-	make -f Makefile.macosx clean all RELEASE_TYPE=OPTIMIZED PROJECT_TYPE=STATIC_LIB ARCH_TYPE=x86_64
-	make -f Makefile.macosx clean all RELEASE_TYPE=DEBUG PROJECT_TYPE=STATIC_LIB ARCH_TYPE=x86_64
-	make -f Makefile.macosx clean all RELEASE_TYPE=OPTIMIZED PROJECT_TYPE=SHARED_LIB ARCH_TYPE=x86_64
-	make -f Makefile.macosx clean all RELEASE_TYPE=DEBUG PROJECT_TYPE=SHARED_LIB ARCH_TYPE=x86_64
 
+releases: i386-releases x86_64-releases
+
+i386:
+	make -f Makefile.macosx all ARCH_TYPE=i386 RELEASE_TYPE=OPTIMIZED PROJECT_TYPE=STATIC_LIB
+	make -f Makefile.macosx all ARCH_TYPE=i386 RELEASE_TYPE=DEBUG PROJECT_TYPE=STATIC_LIB
+	make -f Makefile.macosx all ARCH_TYPE=i386 RELEASE_TYPE=OPTIMIZED PROJECT_TYPE=SHARED_LIB
+	make -f Makefile.macosx all ARCH_TYPE=i386 RELEASE_TYPE=DEBUG PROJECT_TYPE=SHARED_LIB
+
+i386-releases: 
+	make -f Makefile.macosx clean all ARCH_TYPE=i386 RELEASE_TYPE=OPTIMIZED PROJECT_TYPE=STATIC_LIB
+	make -f Makefile.macosx clean all ARCH_TYPE=i386 RELEASE_TYPE=DEBUG PROJECT_TYPE=STATIC_LIB
+	make -f Makefile.macosx clean all ARCH_TYPE=i386 RELEASE_TYPE=OPTIMIZED PROJECT_TYPE=SHARED_LIB
+	make -f Makefile.macosx clean all ARCH_TYPE=i386 RELEASE_TYPE=DEBUG PROJECT_TYPE=SHARED_LIB
+
+x86_64:
+	make -f Makefile.macosx all ARCH_TYPE=x86_64 RELEASE_TYPE=OPTIMIZED PROJECT_TYPE=STATIC_LIB
+	make -f Makefile.macosx all ARCH_TYPE=x86_64 RELEASE_TYPE=DEBUG PROJECT_TYPE=STATIC_LIB
+	make -f Makefile.macosx all ARCH_TYPE=x86_64 RELEASE_TYPE=OPTIMIZED PROJECT_TYPE=SHARED_LIB
+	make -f Makefile.macosx all ARCH_TYPE=x86_64 RELEASE_TYPE=DEBUG PROJECT_TYPE=SHARED_LIB
+
+x86_64-releases:
+	make -f Makefile.macosx clean all ARCH_TYPE=x86_64 RELEASE_TYPE=OPTIMIZED PROJECT_TYPE=STATIC_LIB
+	make -f Makefile.macosx clean all ARCH_TYPE=x86_64 RELEASE_TYPE=DEBUG PROJECT_TYPE=STATIC_LIB
+	make -f Makefile.macosx clean all ARCH_TYPE=x86_64 RELEASE_TYPE=OPTIMIZED PROJECT_TYPE=SHARED_LIB
+	make -f Makefile.macosx clean all ARCH_TYPE=x86_64 RELEASE_TYPE=DEBUG PROJECT_TYPE=SHARED_LIB
 
 
