added xcode 4 project
git-svn-id: svn+ssh://svn.code.sf.net/p/tango-cs/code/share/yat/trunk@17000 4e9c00fd-8f2e-0410-aa12-93ce3db5e235

--- a/src/Makefile.linux
+++ b/src/Makefile.linux
@@ -92,9 +92,9 @@ endif
 # - for a SIMPLE_EXE : PROJECT_NAME will be the name of the executable
 #-----------------------------------------------------------------------------
 ifeq ($(RELEASE_TYPE),OPTIMIZED)
-  PROJECT_NAME = YAT
+  PROJECT_NAME = yat
 else
-  PROJECT_NAME = YATd
+  PROJECT_NAME = yatd
 endif  
 
 #=============================================================================
