updated configure scripts
git-svn-id: svn+ssh://svn.code.sf.net/p/tango-cs/code/share/yat/trunk@17002 4e9c00fd-8f2e-0410-aa12-93ce3db5e235

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -20,4 +20,5 @@ libyat_la_SOURCES = \
 	threading/Barrier.cpp \
 	threading/Task.cpp \
 	threading/Message.cpp \
-	threading/MessageQ.cpp
+	threading/MessageQ.cpp \
+	utils/StringTokenizer.cpp
