--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>fr.soleil.lib</groupId>
     <artifactId>YAT-${aol}-${library}-${mode}</artifactId>
-    <version>1.6.4-SNAPSHOT</version>
+    <version>1.6.6</version>
 
     <packaging>nar</packaging>
 
@@ -37,9 +37,9 @@
     </developers>
 
     <scm>
-        <connection>${scm.connection.svn.tango-cs}:share/yat</connection>
-        <developerConnection>${scm.developerConnection.cvs.svn.tango-cs}:share/yat</developerConnection>
-        <url>${scm.url.svn.tango-cs}/share/yat</url>
+        <connection>${scm.connection.svn.tango-cs}:share/yat/trunk</connection>
+        <developerConnection>${scm.developerConnection.cvs.svn.tango-cs}:share/yat/trunk</developerConnection>
+        <url>${scm.url.svn.tango-cs}/share/yat/trunk</url>
     </scm>
 
     <build>
