--- a/msvc/8.0/YAT_Shared.vcproj
+++ b/msvc/8.0/YAT_Shared.vcproj
@@ -6,7 +6,6 @@
 	ProjectGUID="{5DD2BFDD-4D3F-474A-B9DC-368667C92D20}"
 	RootNamespace="YAT"
 	Keyword="Win32Proj"
-	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
@@ -72,8 +71,6 @@
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(TargetDir)$(TargetName).pdb"
 				SubSystem="2"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
 				ImportLibrary="..\..\lib\shared\msvc-8.0\$(TargetName).lib"
 				TargetMachine="1"
 			/>
@@ -97,8 +94,11 @@
 				Name="VCAppVerifierTool"
 			/>
 			<Tool
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="copy $(TargetDir)lib*.dll $(SOLEIL_ROOT)\sw-support\YAT\bin\msvc-8.0"
+				CommandLine=""
 			/>
 		</Configuration>
 		<Configuration
@@ -156,8 +156,6 @@
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
 				ImportLibrary="..\..\lib\shared\msvc-8.0\$(TargetName).lib"
 				TargetMachine="1"
 			/>
@@ -180,8 +178,11 @@
 				Name="VCAppVerifierTool"
 			/>
 			<Tool
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="copy $(TargetDir)lib*.dll $(SOLEIL_ROOT)\sw-support\YAT\bin\msvc-8.0"
+				CommandLine=""
 			/>
 		</Configuration>
 	</Configurations>
@@ -296,6 +297,10 @@
 				</File>
 				<File
 					RelativePath="..\..\include\yat\config-linux.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\include\yat\config-macosx.h"
 					>
 				</File>
 				<File
