upgrading byte swapping code for x64
git-svn-id: svn+ssh://svn.code.sf.net/p/tango-cs/code/share/yat/trunk@18012 4e9c00fd-8f2e-0410-aa12-93ce3db5e235

--- a/msvc/10.0/YAT_Shared.vcxproj
+++ b/msvc/10.0/YAT_Shared.vcxproj
@@ -149,6 +149,7 @@
       <DataExecutionPrevention>
       </DataExecutionPrevention>
       <ImportLibrary>x64-build\lib\shared\yatd.lib</ImportLibrary>
+      <Profile>false</Profile>
     </Link>
     <Bscmake>
       <SuppressStartupBanner>false</SuppressStartupBanner>
