Added S.Poirier's files to automake/autocong/configure stuffs
git-svn-id: svn+ssh://svn.code.sf.net/p/tango-cs/code/share/yat/trunk@18049 4e9c00fd-8f2e-0410-aa12-93ce3db5e235

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -21,4 +21,17 @@ libyat_la_SOURCES = \
 	threading/Task.cpp \
 	threading/Message.cpp \
 	threading/MessageQ.cpp \
-	utils/StringTokenizer.cpp
+	threading/SyncAccess.cpp \
+	file/FileName.cpp \
+	file/PosixFileImpl.cpp \
+	memory/MemBuf.cpp \
+  system/PosixSysUtilsImpl.cpp \
+  time/Time.cpp \
+	utils/String.cpp \
+	utils/StringTemplate.cpp \
+	utils/Logging.cpp
+
+
+ 
+ 
+ 
