Changed a Makefile (local compil)
git-svn-id: svn+ssh://svn.code.sf.net/p/tango-cs/code/share/yat/trunk@18148 4e9c00fd-8f2e-0410-aa12-93ce3db5e235

--- a/samples/memory/Makefile.linux
+++ b/samples/memory/Makefile.linux
@@ -10,7 +10,7 @@ INCLUDE_DIRS = -I. -I../../include
 #==============================================================================
 # LIB DIRS
 #==============================================================================
-LIB_DIRS = -L../../lib/static
+LIB_DIRS = -L../../target/nar/lib/i386-Linux-g++/static
 
 #==============================================================================
 # BINDING SHARED LIB: NAME & EXTENSION
@@ -32,7 +32,7 @@ LDFLAGS =
 #------------------------------------------------------------------------------
 # LIBS
 #------------------------------------------------------------------------------
-LIBS = -lYAT -lpthread -lstdc++
+LIBS = -lYAT-i386-Linux-gcc-static-release-1.7.2-SNAPSHOT -lpthread -lstdc++
 
 #------------------------------------------------------------------------------
 # OBJS FILES
