--- a/samples/memory/Makefile.linux
+++ b/samples/memory/Makefile.linux
@@ -10,12 +10,13 @@ INCLUDE_DIRS = -I. -I../../include
 #==============================================================================
 # LIB DIRS
 #==============================================================================
-LIB_DIRS = -L../../target/nar/lib/i386-Linux-g++/static
+#LIB_DIRS = -L../../target/nar/lib/i386-Linux-g++/static
+LIB_DIRS = -L../../lib/x86_64/static
 
 #==============================================================================
 # BINDING SHARED LIB: NAME & EXTENSION
 #==============================================================================
-BIN_NAME = sharedptrtest
+BIN_NAME = allocator
 
 #==============================================================================
 # COMP$(CC)ILER/LINKER OPTIONS for GNU/LINUX
@@ -32,13 +33,14 @@ LDFLAGS =
 #------------------------------------------------------------------------------
 # LIBS
 #------------------------------------------------------------------------------
-LIBS = -lYAT-i386-Linux-gcc-static-release-1.7.2-SNAPSHOT -lpthread -lstdc++
+LIBS = -lyatd -lpthread -lstdc++
 
 #------------------------------------------------------------------------------
 # OBJS FILES
 #------------------------------------------------------------------------------
 SP_SRC_OBJS = ./sharedptr_test.o
-SO_SRC_OBJS = ./shared_object_ptr_test.o	
+SO_SRC_OBJS = ./shared_object_ptr_test.o
+ALLOC_SRC_OBJS = ./allocator_test.o	
 	 			 	 	 
 #------------------------------------------------------------------------------
 # RULE for .cpp files
@@ -50,7 +52,7 @@ SO_SRC_OBJS = ./shared_object_ptr_test.o
 #------------------------------------------------------------------------------
 # RULE: all
 #------------------------------------------------------------------------------
-all: build_so build_sp
+all: build_so build_sp build_alloc
 
 #------------------------------------------------------------------------------
 # RULE: build
@@ -60,6 +62,9 @@ build_so: $(SO_SRC_OBJS)
 
 build_sp: $(SP_SRC_OBJS)
 	$(LD) -o sharedptrtest $(LDFLAGS) $(SP_SRC_OBJS) $(LIB_DIRS) $(LIBS) 
+
+build_alloc: $(ALLOC_SRC_OBJS)
+	$(LD) -o allocatortest $(LDFLAGS) $(ALLOC_SRC_OBJS) $(LIB_DIRS) $(LIBS) 
 
 #------------------------------------------------------------------------------
 # RULE: install
